@startuml
'https://plantuml.com/class-diagram
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Employee{
-name
-address
-phoneNumber
-email
-employeeId
-socCode
}

class Role{
-id
-description
}


class User{
-name
-email
-password
}

Employee --|> User
User "*"--"1" Role : plays >
@enduml